--- a/19_setTimeout_setInterval/set_interval.html
+++ b/19_setTimeout_setInterval/set_interval.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     
-    
+    <button type="button" onclick="start()">Start</button>
+    <h1></h1>
     <script src="set_interval.js"></script>
 </body>
 </html>
