--- a/_projects/table/table.html
+++ b/_projects/table/table.html
@@ -13,15 +13,36 @@
                 <tr>
                     <th>userName</th>
                     <th>userID</th>
-                    <th>state</th>
+                    <th>age</th>
                     <th>salary</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="tbody">
+                <!-- <tr>
+                    <td>rohit</td>
+                    <td>321</td>
+                    <td>24</td>
+                    <td>15000</td>
+                </tr>
+                <tr>
+                    <td>rakesh</td>
+                    <td>968</td>
+                    <td>26</td>
+                    <td>15000</td>
+                </tr>
+                <tr>
+                    <td>rohit</td>
+                    <td>21</td>
+                    <td>755</td>
+                    <td>12000</td>
+                </tr> -->
+
             
             </tbody>
         </table>
     </div>
     
+    <script src="table.js"></script>
 </body>
+
 </html>
