--- a/_projects/table/table.html
+++ b/_projects/table/table.html
@@ -11,10 +11,12 @@
         <table>
             <thead>
                 <tr>
-                    <th>userName</th>
                     <th>userID</th>
-                    <th>age</th>
-                    <th>salary</th>
+                    <th>userName</th>
+                    <th>email</th>
+                    <th>city</th>
+                    <th>phone</th>
+                    <th>companyName</th>
                 </tr>
             </thead>
             <tbody class="tbody">
