added pagination design

--- a/_projects/table/table.html
+++ b/_projects/table/table.html
@@ -44,7 +44,9 @@
                 </tbody>
             </table>
         </div>
+
         <div class="table-pagination">
+            <div class="data-count"> showing 1 to 10 out of 100</div>
             <div class="box1">
                 <div class="btn">prev</div>
             </div>
